<fix>margin and text alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -28,7 +28,7 @@ main {
 .side-container {
     display: flex;
     flex-direction: column;
-    margin-left: 1rem;
+    margin: 0 1rem 0 1rem;
 }
 
 .img-container {
@@ -45,7 +45,14 @@ main {
     object-fit: cover;
 }
 
+
 /** hide img before search **/
 .hidden{
     display: none;
+}
+
+@media (max-width: 830px) {
+    #flowerName, #botName, #symbolism {
+        text-align: center;
+    }
 }
